# apigee-hybrid-mcp

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  =1.13.0  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: release.yml
archive/: ARCHIVE_README.txt
archive/apigee-docs/: 00-index.txt  01-organizations-api.txt  02-environments-api.txt  03-api-proxies-api.txt  04-developers-api.txt  05-apps-api.txt  06-api-products-api.txt  07-shared-flows-api.txt  08-keystores-api.txt  09-companies-teams-api.txt  10-debug-trace-api.txt
deployment/ecs/: README.md  task-definition.json
deployment/kubernetes/helm/: Chart.yaml  values.yaml
deployment/kubernetes/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
docs/: ERROR_CODES.md  TEAMS_API.md
src/apigee_hybrid_mcp/: __init__.py  config.py  error_handlers.py  exceptions.py  server.py
src/apigee_hybrid_mcp/api/: __init__.py  client.py
src/apigee_hybrid_mcp/models/: __init__.py  team.py
src/apigee_hybrid_mcp/repository/: __init__.py  team_repository.py
src/apigee_hybrid_mcp/teams/: __init__.py  models.py  repository.py
src/apigee_hybrid_mcp/utils/: logging.py  resilience.py
src/apigee_hybrid_mcp/validation/: __init__.py  validators.py
tests/: conftest.py
tests/unit/: test_api_products.py  test_developers.py  test_error_handlers.py  test_exceptions.py  test_keystores.py  test_proxy_lifecycle.py  test_teams.py  test_trace.py  test_validation.py
