[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigee-hybrid-mcp"
version = "1.0.0"
description = "MCP server for Google Apigee Hybrid API management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Society for Conservation GIS Wales", email = "info@scgis.wales"}
]
keywords = ["mcp", "apigee", "google-cloud", "api-management", "hybrid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.151.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "circuitbreaker>=2.0.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-aiohttp",
]

[project.scripts]
apigee-mcp = "apigee_hybrid_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",    # line too long, handled by black
    "B008",    # do not perform function calls in argument defaults
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # multi-line docstring summary should start at the second line (conflicts with D212)
    "ANN101",  # missing type annotation for self in method
    "ANN102",  # missing type annotation for cls in classmethod
    "ANN401",  # dynamically typed expressions (Any) are disallowed
    "S101",    # use of assert detected (needed for tests)
    "COM812",  # trailing comma missing (conflicts with black)
    "D107",    # missing docstring in __init__ (we document in class docstring)
]

[tool.ruff.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
